add_subdirectory(01_StaticTriangle)
add_subdirectory(02_StaticCube)
add_subdirectory(03_Texture2dCube)
add_subdirectory(04_Skybox)
add_subdirectory(05_PhongLighting)
add_subdirectory(06_InstanceDraw)
add_subdirectory(07_ShadowMapping)
#add_subdirectory(04_MultiImageSampler)
#add_subdirectory(05_MultiObjects)
#add_subdirectory(06_Lighting)
#add_subdirectory(07_MipmapGen)
#add_subdirectory(08_InstanceDraw)
#add_subdirectory(09_VolumeCloud)
#add_subdirectory(10_PlanarMirror)
