if(BUILD_QtExamples MATCHES ON)
    set(CMAKE_INCLUDE_CURRENT_DIR True)
    find_package(Qt5 COMPONENTS Widgets REQUIRED)
    if(UNIX)
        find_package(Qt5 COMPONENTS X11Extras)
        include_directories()
    endif()
    set(CMAKE_AUTOMOC ON)
    set(CMAKE_AUTOUIC ON)
    set(CMAKE_AUTORCC ON)
    add_subdirectory(01_QtTriangle)
endif()
