cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
SET(${LEARN_VULKAN_PROJECT} learnvulkan_)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/cxx/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/cxx/*.cxx)
FILE(GLOB HEAD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB UI_FILES ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.ui)

add_subdirectory(base)
