cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
SET(LIB_NAME vulkanbase)

add_definitions(-DVK_BASE_EXPORT_API)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/*)
FILE(GLOB HEAD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*)
FILE(GLOB_RECURSE IMGUI ${CMAKE_SOURCE_DIR}/third_party/imgui/*)

add_library(${LIB_NAME} SHARED ${SRC_FILES} ${IMGUI})
target_link_libraries(${LIB_NAME} ${Vulkan_LIBRARIES})

INSTALL(TARGETS ${LIB_NAME} DESTINATION "${PROJECT_SOURCE_DIR}/bin")
