cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
SET(${LEARN_VULKAN_PROJECT} learnvulkan_)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/cxx/*.cpp ${CMAKE_CURRENT_SOURCE_DIR}/cxx/*.cxx)
FILE(GLOB HEAD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*.h)
FILE(GLOB UI_FILES ${CMAKE_CURRENT_SOURCE_DIR}/UI/*.ui)

include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(${PUP_PROJECT_NAME} ${SRC_FILES} ${HEAD_FILES})
TARGET_LINK_LIBRARIES(${PUP_PROJECT_NAME} ${OpenCV_LIBS} ${DCMTK_LIBRARIES} ${VULKAN_LIB} ${SYS_LIB})
