cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
SET(LEARN_VULKAN_PROJECT Adv_01_Skybox)

FILE(GLOB_RECURSE SRC_FILES ${CMAKE_CURRENT_SOURCE_DIR}/src/*)
FILE(GLOB HEAD_FILES ${CMAKE_CURRENT_SOURCE_DIR}/include/*)


include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include)
add_executable(${LEARN_VULKAN_PROJECT} ${SRC_FILES} ${HEAD_FILES})
TARGET_LINK_LIBRARIES(${LEARN_VULKAN_PROJECT} vulkan_basicengine vulkanbase ${Vulkan_LIBRARIES} assimp)

INSTALL(TARGETS ${LEARN_VULKAN_PROJECT} DESTINATION "${PROJECT_SOURCE_DIR}/bin")
